--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <p>El id ingresado no existe, por favor introducir id entre 1 y 7 inclusive</p>
         </div>
         <div>
+            <img id="img" src="">
             <h2 id="h2"></h2>
             <h4 id="h4"></h4>
         </div>
